--- a/app/components/header-black.html
+++ b/app/components/header-black.html
@@ -27,11 +27,8 @@
             </div>
         </div>
         <nav class="header-black__sub-menu">
-            <div class="header-black__sub-menu-item-square">
-                <div class="sub-menu-item-square__title">
-                    <img src="img/header-black/03.png" alt="">
+            <div class="header-black__sub-menu-item header__sub-menu-item--square">
                     <a href="" class="header-black__link">Главная</a>
-                </div>
                 <div class="splitter"></div>
             </div>
             <div class="header-black__sub-menu-item">
