--- a/app/scss/product-catalog.scss
+++ b/app/scss/product-catalog.scss
@@ -1,21 +1,15 @@
 
 .product-catalog {
+  a{
+    color: black;
+  }
   display: flex;
   flex-direction: column;
   color: black;
   font-size: 38px;
   line-height: 65px;
   padding-bottom: 100px;
-
-  &__top {
-    
-  }
-
-  // .product-catalog__wrapper
-
-  &__wrapper {
-
-  }
+  cursor: pointer;
 
   // .product-catalog__card-lists
 
@@ -26,33 +20,19 @@
     margin-top: 85px;
   }
 
-
-  &__card {
-    justify-content: space-between;
-  }
-}
-
-.product-catalog-card {
-  flex-direction: column;
-  max-width: 230px;
-  // .product-catalog-card__img
-
   &__img {
-    img{
-      object-fit: contain;
-      width: 230px;
-      height: 230px;
-    }
-
+    object-fit: contain;
+    width: 230px;
+    height: 230px;
+    margin: 0 auto;
   }
-
-  // .product-catalog-card__title
-
   &__title {
     font-size: 16px;
     line-height: 30px;
+    max-width: 240px;
   }
 }
+
 
 @media (max-width: 950px) {
 
