--- a/app/scss/spare-parts.scss
+++ b/app/scss/spare-parts.scss
@@ -3,7 +3,12 @@
 .spare-parts-page {
   color: rgb(0, 0, 0);
   margin-bottom: 120px;
-
+  &__button{
+    margin-right: 26px;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+  }
   &__top {
     display: flex;
     justify-content: space-between;
@@ -12,27 +17,22 @@
     gap: 25px;
   }
 
-  &__input {
+  &__search {
     padding: 26px 70px 26px 70px;
     display: flex;
     background: #F2F2F2;
     width: 100%;
-
-    svg {
-      margin-right: 26px;
-    }
-
-    input {
-      width: 100%;
-      border: none;
-      font-weight: 400;
-      font-size: 20px;
-      line-height: 24px;
-      outline: none;
-      background: #F2F2F2;
-    }
   }
 
+  &__input{
+    width: 100%;
+    border: none;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    outline: none;
+    background: #F2F2F2;
+  }
   &__filter {
     svg {
       margin-right: 21px;
@@ -55,6 +55,9 @@
       @include transformS(1.01);
     }
   }
+
+  
+
 
   // .spare-parts-page__wrapper
 
@@ -117,8 +120,8 @@
     border-bottom: 2px solid #1D1717;
     margin-bottom: 45px;
   }
-}
 
+}
 .spare-title-category {
   display: flex;
   flex-wrap: wrap;
