--- a/app/components/index/about-company-block.html
+++ b/app/components/index/about-company-block.html
@@ -78,9 +78,9 @@
     </div>
 </section>
 <section id="@@idScroll" class="main-about page-padding">
-    <div class="main-about__doc">
-        <img src="img/about/01.png" alt="">
-    </div>
+
+        <img class="main-about__doc"src="img/about/01.png" alt="">
+
     <div class="main-about__info">
         <div class="main-about__title">О компании</div>
         <div class="main-about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
