--- a/app/components/index/help-block.html
+++ b/app/components/index/help-block.html
@@ -10,8 +10,8 @@
                 высококвалифицированного оборудования.
             </div>
         </div>
-        <a href="" class="main-help__img">
-            <img src="img/help/01.png" alt="">
+        <a href="" class="main-help__link">
+            <img class="main-help__img" src="img/help/01.png" alt="">
         </a>
     </div>
 
