--- a/app/components/index/main-spare-block.html
+++ b/app/components/index/main-spare-block.html
@@ -1,9 +1,7 @@
 <section class="main-spare page-padding">
   <div class="main-spare__container">
     <img class="main-spare__img_back" src="img/spare/01.png" alt="">
-    <div class="main-spare__img">
-      <img src="img/spare/01.png" alt="">
-    </div>
+    <img class="main-spare__img"src="img/spare/01.png" alt="">
     <div class="main-spare__info">
       <div class="main-spare__title">Запасные части <br>
         и расходные<br>
