approved all bugs

--- a/app/scss/product-about.scss
+++ b/app/scss/product-about.scss
@@ -35,6 +35,7 @@
     border-radius: 5px;
     display: block;
     max-width: 329px;
+    text-align: center;
   }
   &__images {
     display: flex;
