--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -158,9 +158,7 @@
       }
     }
     &__img{
-      max-height: 280px;
-      min-height: 280px;
-      min-width: 360px;
+      width: 500px;
       object-fit: contain;
     }
   }
