--- a/app/components/header-black.html
+++ b/app/components/header-black.html
@@ -1,8 +1,11 @@
 <header class="header-black page-padding @@class">
     <div class="header-black__inner">
         <div class="header-black__menu">
-            <a href="" class="header-black__menu-logo">
+            <a href="/" class="header-black__menu-logo">
                 <img src="img/header-black/logo.svg" alt="">
+            </a>
+            <a href="" class="header-black__menu-text_top">
+                Оборудование для струйной цементации и бурения
             </a>
             <div class="header-black__menu-mail">
                 <svg width="43" height="43" viewBox="0 0 43 43" fill="none" xmlns="http://www.w3.org/2000/svg">
