--- a/app/components/index/main-category-block.html
+++ b/app/components/index/main-category-block.html
@@ -1,7 +1,7 @@
 <section class="main-category page-padding__left">
     <div class="main-category__top page-padding__right">
         <h3>Категории товаров</h3>
-        <a>Перейти в каталог категорий</a>
+        <a>Перейти в каталог техники</a>
     </div>
     <div class="main-category__card-helper__wrapper">
         <div class="main-category__card-helper">
