--- a/app/components/index/main-spare-block.html
+++ b/app/components/index/main-spare-block.html
@@ -7,9 +7,9 @@
         и расходные<br>
         материалы
       </div>
-      <div class="main-spare__text">«Буровые технологии» представляет Вашему<br>
-        вниманию каталог запасных частей и расходных<br>
-        материалов, доступных к заказу
+      <div class="main-spare__text">«Буровые технологии» представляет Вашему
+        вниманию каталог запасных частей и расходных
+        материалов, доступных к заказу»
       </div>
       <a class="main-spare__button" href="">Перейти в каталог запчастей</a>
 
