--- a/app/components/index/help-block.html
+++ b/app/components/index/help-block.html
@@ -5,9 +5,10 @@
                 в реализации строительных
                 задач разного уровня сложности
             </div>
-            <div class="main-help__text">В том числе, связанных с укреплением, цементацией
-                грунта и бурением с использованием инновационного
-                высококвалифицированного оборудования.
+            <div class="main-help__text">В том числе, связанных с грунтовой инъекцией, цементацией, струйной цементацией
+                Jet grouting, устройством грунтовых анкеров, свай, противофильтрационных завес, пригрузов, закрепления
+                сводов тоннелей, укрепление фундаментов и т.д. с использованием высококачественного инновационного
+                оборудования.
             </div>
         </div>
         <a href="" class="main-help__link">
