--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -872,6 +872,7 @@
         font-size: 16px;
         line-height: 26px;
         margin: 0 auto;
+        text-align: center;
       }
 
       &__info {
