--- a/app/components/header-black.html
+++ b/app/components/header-black.html
@@ -98,24 +98,24 @@
             <div class="header-black__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
                     <img src="img/header-black/03.png" alt="">
-                    <a href="" class="header-black__link">Главная</a>
+                    <a href="" class="header-black__link_w">Главная</a>
                 </div>
                 <div class="splitter__white"></div>
             </div>
             <div class="header-black__sub-menu-item">
-                <a href="/product-information.html" class="header-black__link">Каталог техники</a>
+                <a href="/product-information.html" class="header-black__link_w">Каталог техники</a>
                 <div class="splitter__white"></div>
             </div>
             <div class="header-black__sub-menu-item">
-                <a href="/product-catalog.html" class="header-black__link">Каталог запчастей</a>
+                <a href="/product-catalog.html" class="header-black__link_w">Каталог запчастей</a>
                 <div class="splitter__white"></div>
             </div>
             <div class="header-black__sub-menu-item">
-                <a href="" class="header-black__link">О компании</a>
+                <a href="" class="header-black__link_w">О компании</a>
                 <div class="splitter__white"></div>
             </div>
             <div class="header-black__sub-menu-item">
-                <a href="" class="header-black__link">Статьи</a>
+                <a href="" class="header-black__link_w">Статьи</a>
                 <div class="splitter__white"></div>
             </div>
         </nav>
