--- a/app/scss/product-catalog.scss
+++ b/app/scss/product-catalog.scss
@@ -41,18 +41,19 @@
   .product-catalog {
 
     &__card-lists {
+      margin: 0;
       gap: 30px;
       grid-template-columns: repeat(2, 1fr);
-
     }
 
     &__top {
 
       text-align: center;
-      margin-bottom: 95px;
+      margin-bottom: 50px;
     }
   }
-  .product-catalog-card {
+  .product-catalog__card {
+    justify-self: center;
     &__title {
       font-size: 25px;
     }
