--- a/app/components/index/main-block.html
+++ b/app/components/index/main-block.html
@@ -5,7 +5,7 @@
             НА ТЕРРИТОРИИ
             РОССИИ И СТРАН СНГ
         </div>
-        <div class="main-application__text">Мировой лидер в разработке и производстве оборудования для
+        <div class="main-application__text">Tecniwell - мировой лидер в разработке и производстве оборудования для
             струйной цементации, цементации и смесительных установок
         </div>
         <a class="main-application__button popup__button">Оставить заявку</a>
@@ -13,22 +13,20 @@
     <section class="main-experience">
         <div class="main-experience__inner page-padding">
             <div class="main-experience__left">
-                <div class="main-experience__title">
-                    <div class="main-experience__numbers">20 лет</div>
-                    <div class="main-experience__plus">
-                        +
-                    </div>
-                </div>
-                <div class="main-experience__sub-title">
-                    Компания на рынке
-                </div>
+                <!--                <div class="main-experience__title">-->
+                <!--                    <div class="main-experience__numbers">20 лет</div>-->
+                <!--                    <div class="main-experience__plus">-->
+                <!--                        +-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="main-experience__sub-title">-->
+                <!--                    Компания на рынке-->
+                <!--                </div>-->
             </div>
             <div class="main-experience__right">
-                <div class="main-experience__text">Наша компания находится на рынке более 20 лет. Мы
-                    единственный
-                    официальный дилер в РФ и СНГ. Наша компания качественно
-                    выполняет любые поставленные задачи и предоставляет гибкие
-                    условия для постоянных клиентов.
+                <div class="main-experience__text">Более 20 лет наша компания - единственный
+                    официальный дилер Tecniwell - представляет итальянского производителя оборудования на рынках России
+                    и стран СНГ.
                 </div>
             </div>
         </div>
