--- a/app/components/index/main-category-block.html
+++ b/app/components/index/main-category-block.html
@@ -8,39 +8,39 @@
             <div class="main-category__card-opacity"></div>
             <div class="main-category__card-list">
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/2.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/3.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/4.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/5.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
 
