--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -485,6 +485,7 @@
     &__card-list {
       display: flex;
       flex-direction: row;
+      align-items: flex-end;
       gap: 20px;
       overflow-x: auto;
       width: 100%;
@@ -524,6 +525,9 @@
       min-width: 250px;
       z-index: 10;
       cursor: pointer;
+
+      text-align: center;
+
       @include transition();
 
       &:hover:first-child {
