--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -98,6 +98,7 @@
       color: #1D1717;
       margin-bottom: 19px;
     }
+
     &__name {
       font-size: 38px;
       line-height: 56px;
@@ -157,7 +158,8 @@
         @include transform();
       }
     }
-    &__img{
+
+    &__img {
       width: 500px;
       object-fit: contain;
     }
@@ -183,6 +185,7 @@
       object-fit: contain;
       max-width: 600px;
       max-height: 400px;
+
       img {
         min-height: 350px;
         object-fit: cover;
@@ -202,13 +205,11 @@
     }
 
 
-
     &__info {
       max-width: 500px;
       display: flex;
       flex-direction: column;
     }
-
 
 
     &__title {
@@ -218,14 +219,12 @@
     }
 
 
-
     &__text {
       font-weight: 400;
       font-size: 16px;
       line-height: 30px;
       margin-bottom: 47px;
     }
-
 
 
     &__button {
@@ -251,28 +250,35 @@
   }
 
   &-about-big {
-    &__item-link{
+    &__item-link {
       text-align: center;
       text-decoration-line: underline;
-      
+
       color: #D82329;
     }
-    &__info{
+
+    &__info {
       display: flex;
+      flex-wrap: wrap;
+      width: 100%;
     }
+
     &__img {
+      flex: 1;
       display: inline-block;
       z-index: 2;
       max-width: 90%;
       max-height: 374px;
       object-fit: cover;
     }
-    &__item{
-      &:last-child{
-        a{
+
+    &__item {
+      &:last-child {
+        a {
           padding-bottom: 25px;
           position: relative;
-          &::after{
+
+          &::after {
             content: '';
             position: absolute;
             border: 1px solid #B3B3B3;
@@ -282,14 +288,19 @@
           }
         }
       }
-    } 
-    &__items{
+    }
+
+    &__items {
+      flex: 1;
       margin-right: 57px;
-      &:last-child{
+      min-width: 500px;
+
+      &:last-child {
         background-color: #99191E;
       }
     }
-    &__item-description{
+
+    &__item-description {
       font-weight: 400;
       font-size: 16px;
       line-height: 30px;
@@ -301,7 +312,8 @@
       justify-content: space-between;
       align-items: center;
       position: relative;
-      &::before{
+
+      &::before {
         content: '';
         position: absolute;
         border: 1px solid #B3B3B3;
@@ -311,13 +323,13 @@
         right: 0;
       }
     }
-    &__mobile{
+
+    &__mobile {
       display: none;
     }
 
 
-
-    &__item-text{
+    &__item-text {
       margin-right: 57px;
       max-width: 488px;
       font-weight: 400;
@@ -325,12 +337,12 @@
       line-height: 30px;
       color: #1D1717;
     }
+
     margin-bottom: 110px;
 
     &__info {
       display: flex;
     }
-
 
 
     &__title {
@@ -514,6 +526,7 @@
     &__card {
       display: flex;
       flex-direction: column;
+      align-items: center;
 
       font-family: 'Montserrat', sans-serif;
       font-style: normal;
@@ -540,6 +553,8 @@
       }
 
       img {
+        max-height: 250px;
+        max-width: 250px;
         object-fit: cover;
       }
 
@@ -674,21 +689,26 @@
     align-items: center;
   }
 }
-@media (max-width: 1500px) {
+
+@media (max-width: 1600px) {
   .main {
-    &-about-big{
-      &__info{
+    &-about-big {
+      &__info {
         flex-wrap: wrap;
       }
-      &__items{
+
+      &__items {
         margin-bottom: 30px;
       }
-      &__img{
+
+      &__img {
+        max-width: 570px;
         margin: 0 auto;
       }
     }
-  } 
+  }
 }
+
 @media (max-width: 1200px) {
   .main {
     &-application {
@@ -732,11 +752,16 @@
     }
 
     &-about-big {
-      &__info{
+      &__info {
 
         margin: 0 auto;
 
       }
+
+      &__img {
+        max-width: 460px;
+      }
+
       padding: 0 30px;
     }
   }
@@ -751,9 +776,20 @@
     }
   }
 }
+@media (max-width: 1100px) {
+  .main-about-big__img {
+    max-width: none;
+    width: 100%;
+    padding-right: 57px;
 
+    img {
+      width: 100%;
+      min-width: 100px;
+    }
+  }
+}
 @media (max-width: 930px) {
-  .page-padding__left{
+  .page-padding__left {
     padding: 0;
   }
   .main {
@@ -944,12 +980,15 @@
         }
       }
     }
+
     &-spare {
-      &__container{
+      &__container {
         display: block;
-        
+
       }
+
       padding: 40px 10px;
+
       &__img {
         display: none;
 
@@ -973,7 +1012,7 @@
         br {
           display: none;
         }
-        
+
         max-width: 321px;
         font-weight: 500;
         font-size: 16px;
@@ -986,10 +1025,11 @@
       padding: 0 10px;
       margin-bottom: 45px;
       text-align: center;
+
       &__img {
+        padding-right: 57px;
         min-height: 240px;
         object-fit: cover;
-        margin: 0 auto;
       }
 
 
@@ -1054,32 +1094,40 @@
 
 @media (max-width: 560px) {
 
-  .main-about-big{
-    &__item-description{
+  .main-about-big {
+    &__item-description {
       cursor: default;
     }
-    &__info{
-      padding: 0;
+
+    &__info {
+      //padding: 0;
+      padding-right: 15px;
     }
-    &__img{
+
+    &__img {
       object-position: left;
       padding: 0;
       margin: 30px auto 0;
-      width: 100%;}
-    &__items{
+      width: 100%;
+    }
+
+    &__items {
       display: none;
     }
-    &__item{
+
+    &__item {
       margin-bottom: 22px;
       width: 100%;
     }
-    &__item{
-      &:last-child{
-        a{
+
+    &__item {
+      &:last-child {
+        a {
           padding-bottom: 25px;
           position: relative;
           width: 100%;
-          &::after{
+
+          &::after {
             content: '';
             position: absolute;
             border: 1px solid #ffffff;
@@ -1088,16 +1136,18 @@
           }
         }
       }
-    } 
-    &__item-description{
+    }
+
+    &__item-description {
       margin-bottom: 16px;
     }
-    &__mobile{
+
+    &__mobile {
       display: block;
     }
   }
-  .main-about{
-    &__title{
+  .main-about {
+    &__title {
       font-size: 23px;
     }
   }
