--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -555,7 +555,7 @@
       img {
         max-height: 250px;
         max-width: 250px;
-        object-fit: cover;
+        object-fit: contain;
       }
 
       p {
