--- a/app/scss/product-about.scss
+++ b/app/scss/product-about.scss
@@ -12,7 +12,7 @@
     margin-right: 73px;
     max-width: 700px !important;
     max-height: 400px !important;
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
 
     img {
@@ -77,7 +77,7 @@
   &-image {
     width: 48%;
     height: 48%;
-    object-fit: fill;
+    object-fit: contain;
   }
 
   &__images {
