--- a/app/scss/product-about.scss
+++ b/app/scss/product-about.scss
@@ -25,7 +25,7 @@
   &__document img {
     max-width: 100%;
     max-height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   &__info {
