--- a/app/components/spare-parts/spare-card.html
+++ b/app/components/spare-parts/spare-card.html
@@ -6,9 +6,9 @@
     <div class="card-name-spare__text">Название товара</div>
   </div>
   <div class="spare-parts-page__selected">Первый параметр</div>
-  <div class="spare-parts-page__wrapper__card-params">
-    <div>Параметр 1: Lorem</div>
-    <div>Параметр 2: Lorem</div>
-    <div>Параметр 3: Lorem</div>
-  </div>
+<!--  <div class="spare-parts-page__wrapper__card-params">-->
+<!--    <div>Параметр 1: Lorem</div>-->
+<!--    <div>Параметр 2: Lorem</div>-->
+<!--    <div>Параметр 3: Lorem</div>-->
+<!--  </div>-->
 </div>
