--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -588,7 +588,7 @@
 
   &__img {
     margin-bottom: 106px;
-    background-image: url("img/content1/1.png");
+    background-image: url("../img/content1/1.png");
     background-position: center top;
     background-repeat: no-repeat;
     background-color: rgba(black, 0.87);
