--- a/app/scss/product-catalog.scss
+++ b/app/scss/product-catalog.scss
@@ -1,5 +1,10 @@
 
 .product-catalog {
+
+  &__wrapper {
+    margin-bottom: 70px;
+  }
+
   a{
     color: black;
   }
@@ -8,7 +13,7 @@
   color: black;
   font-size: 38px;
   line-height: 65px;
-  padding-bottom: 100px;
+  padding-bottom: 30px;
   cursor: pointer;
 
   // .product-catalog__card-lists
