--- a/app/scss/spare-parts.scss
+++ b/app/scss/spare-parts.scss
@@ -3,12 +3,14 @@
 .spare-parts-page {
   color: rgb(0, 0, 0);
   margin-bottom: 120px;
-  &__button{
+
+  &__button {
     margin-right: 26px;
-        border: none;
-        background-color: transparent;
-        cursor: pointer;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
   }
+
   &__top {
     display: flex;
     justify-content: space-between;
@@ -24,7 +26,7 @@
     width: 100%;
   }
 
-  &__input{
+  &__input {
     width: 100%;
     border: none;
     font-weight: 400;
@@ -33,6 +35,7 @@
     outline: none;
     background: #F2F2F2;
   }
+
   &__filter {
     svg {
       margin-right: 21px;
@@ -56,8 +59,11 @@
     }
   }
 
-  
 
+  &__pagination {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 
   // .spare-parts-page__wrapper
 
@@ -100,6 +106,7 @@
     align-items: center;
     justify-content: center;
   }
+
   &__category {
     width: 50%;
   }
@@ -126,6 +133,7 @@
   }
 
 }
+
 .spare-title-category {
   display: flex;
   flex-wrap: wrap;
@@ -176,6 +184,7 @@
   .spare-parts-page {
     &__wrapper {
       display: none;
+
       &_mobile {
         font-family: 'Montserrat', sans-serif;
         font-style: normal;
@@ -187,6 +196,7 @@
         padding: 34px;
         box-shadow: 10px 10px 20px 20px rgba(230, 230, 230, 0.25);
       }
+
       &__card {
         display: flex;
         flex-direction: column;
@@ -197,6 +207,7 @@
           flex-direction: row;
           align-items: center;
         }
+
         &-params {
           display: flex;
           flex-direction: column;
