--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,7 @@
 @import "spare-parts";
 @import "product-about";
 @import "news";
+@import "paginator";
 
 /*----------------------------------------*/
 .splitter {
