--- a/app/components/index/main-block.html
+++ b/app/components/index/main-block.html
@@ -8,7 +8,9 @@
         <div class="main-application__text">Tecniwell - мировой лидер в разработке и производстве оборудования для
             струйной цементации, цементации и смесительных установок
         </div>
-        <a class="main-application__button popup__button">Оставить заявку</a>
+        <div class="main-application__button-wrapper">
+            <a class="main-application__button popup__button">Оставить заявку</a>
+        </div>
     </section>
     <section class="main-experience">
         <div class="main-experience__inner page-padding">
