--- a/app/scss/spare-parts.scss
+++ b/app/scss/spare-parts.scss
@@ -211,6 +211,7 @@
 
         display: flex;
         flex-direction: column;
+        gap: 20px;
         padding: 34px;
         box-shadow: 10px 10px 20px 20px rgba(230, 230, 230, 0.25);
       }
