--- a/app/components/index/main-spare-block.html
+++ b/app/components/index/main-spare-block.html
@@ -7,7 +7,7 @@
         и расходные<br>
         материалы
       </div>
-      <div class="main-spare__text">«Буровые технологии» представляет Вашему
+      <div class="main-spare__text">Компания «Буровые технологии» представляет Вашему
         вниманию каталог запасных частей и расходных
         материалов, доступных к заказу»
       </div>
