--- a/app/scss/spare-parts.scss
+++ b/app/scss/spare-parts.scss
@@ -239,8 +239,13 @@
 
 @media (max-width: 639px) {
   .spare-parts-page {
+    &__search {
+      padding: 12px;
+    }
+
     &__input {
       padding: 20px 10px;
+      font-size: 16px;
     }
 
     &__filter {
