--- a/app/components/index/help-block.html
+++ b/app/components/index/help-block.html
@@ -3,7 +3,7 @@
         <div class="main-help__info">
             <div class="main-help__title">Помощь заказчикам
                 в реализации строительных
-                задач разного уровня сложности
+                задач разных уровней сложности
             </div>
             <div class="main-help__text">В том числе, связанных с грунтовой инъекцией, цементацией, струйной цементацией
                 Jet grouting, устройством грунтовых анкеров, свай, противофильтрационных завес, пригрузов, закрепления
