--- a/app/components/index/main-spare-block.html
+++ b/app/components/index/main-spare-block.html
@@ -9,7 +9,7 @@
       </div>
       <div class="main-spare__text">Компания «Буровые технологии» представляет Вашему
         вниманию каталог запасных частей и расходных
-        материалов, доступных к заказу»
+        материалов, доступных к заказу
       </div>
       <a class="main-spare__button" href="">Перейти в каталог запчастей</a>
 
