--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -505,6 +505,7 @@
       width: 100%;
       z-index: 11;
       padding-bottom: 40px;
+      position: relative;
 
       &::-webkit-scrollbar {
         height: 5px;
