--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -506,6 +506,7 @@
       z-index: 11;
       padding-bottom: 40px;
       position: relative;
+      -webkit-overflow-scrolling:touch;
 
       &::-webkit-scrollbar {
         height: 5px;
