--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -579,6 +579,7 @@
       display: flex;
       justify-content: end;
       width: 100%;
+      overflow: auto;
 
       &__wrapper {
         display: flex;
