--- a/app/components/spare-parts/spare-card.html
+++ b/app/components/spare-parts/spare-card.html
@@ -1,8 +1,8 @@
 <div class="spare-parts-page__wrapper__card">
   <div class="spare-parts-page__wrapper__card-top">
-    <div class="card-name-spare__img">
-      <img src="img/spare_frame/01.png" alt="">
-    </div>
+<!--    <div class="card-name-spare__img">-->
+<!--      <img src="img/spare_frame/01.png" alt="">-->
+<!--    </div>-->
     <div class="card-name-spare__text">Название товара</div>
   </div>
   <div class="spare-parts-page__selected">Первый параметр</div>
