--- a/app/scss/spare-parts.scss
+++ b/app/scss/spare-parts.scss
@@ -110,7 +110,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   &__category {
@@ -128,7 +128,7 @@
     border: 1px solid #D82329;
     padding: 10px 18px;
     width: max-content;
-    align-self: center;
+    align-self: flex-start;
     margin: 0;
   }
 
@@ -161,7 +161,7 @@
   &__category {
     width: 50%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
 
     &:last-child {
       justify-content: center;
@@ -185,6 +185,8 @@
   // .card-name-spare__text
 
   &__text {
+    display: flex;
+    justify-content: flex-start;
   }
 }
 
